--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,8 @@ android {
     }
     packagingOptions {
         resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+            exclude "**/attach_hotspot_windows.dll"
+            excludes += '/META-INF/{AL2.0,LGPL2.1,licenses/ASM}'
         }
     }
 }
@@ -63,4 +64,7 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    androidTestImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+    androidTestImplementation "org.mockito:mockito-android:3.12.4"
+
 }
